Breaking: Table List replaced `.table-list a` with `.table-list-link` so we can use two types of link colors in `.table-list` also prevents colors from bleeding into other components like `.dropdown-item`
Breaking: Table List replaced $table-list-link-color` and `$table-list-link-color-hover` with `$table-list-link` Sass map

New: Table added styles for `.table-title`, `.table-title a`, `.table-action-link`, and `.table-link`

New: Table added `$table-title`, `$table-action-link`, and `table-link` Sass maps

--- a/packages/clay/src/scss/components/_tables.scss
+++ b/packages/clay/src/scss/components/_tables.scss
@@ -72,6 +72,28 @@ th {
 	}
 }
 
+// Table Title
+
+.table-title {
+	@include clay-text-typography($table-title);
+}
+
+.table-title a {
+	@include clay-link($table-title-link);
+}
+
+// Table Link
+
+.table-link {
+	@include clay-link($table-link);
+}
+
+// Table Action Link
+
+.table-action-link {
+	@include clay-link($table-action-link);
+}
+
 // Table List Skin
 
 .table-list {
@@ -123,14 +145,6 @@ th {
 					}
 				}
 			}
-		}
-	}
-
-	a {
-		color: $table-list-link-color;
-
-		@include hover-focus {
-			color: $table-list-link-color-hover;
 		}
 	}
 
@@ -256,6 +270,12 @@ th {
 
 .table-list-title a {
 	@include clay-link($table-list-title-link);
+}
+
+// Table List Link
+
+.table-list-link {
+	@include clay-link($table-list-link);
 }
 
 // Table Helpers
